plugins {
    id("java")
    id("jacoco")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(15)
    }
}

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--enable-preview", "--release", "15", "-Xlint:deprecation", "-Xlint:unchecked"]
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    maxParallelForks = 8
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}

configurations {
    all {
        resolutionStrategy {
            failOnVersionConflict()
        }
    }
}

jacoco {
    toolVersion = "0.8.6"
}

jacocoTestReport {
    reports {
        executionData.setFrom project.fileTree(dir: '.', include: '**/build/jacoco/*.exec')
        xml.enabled true
    }
}
